added .DS_Store and sessions to .gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,8 @@
+sessions
+
+# OSX
+.DS_Store
+
 *.py[cod]
 
 # C extensions
@@ -10,7 +15,7 @@ dist
 build
 eggs
 parts
-bin
+#bin
 var
 sdist
 develop-eggs
